# aiota2

./: LICENSE  README.md  pyproject.toml
src/aiota2/: __init__.py  client.py  datamodel.py  exceptions.py
src/aiota2.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
